Update lint-test workflow to run lint, test, and codegen tasks sequentially

--- a/.github/workflows/lint-test.yaml
+++ b/.github/workflows/lint-test.yaml
@@ -19,10 +19,12 @@ jobs:
         uses: devcontainers/ci@v0.3
         with:
           push: never
-          runCmd: |
-            task lint
+          runCmd: >
+            task lint && \
+            task test && \
+            task codegen && \
+            task lint && \
             task test
-            task codegen
 
   test-matrix:
     name: Test multiple Go versions
